--- a/DM_Project2.ipynb
+++ b/DM_Project2.ipynb
@@ -6,7 +6,7 @@
       "name": "DM-Project2",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQ47zF0TTV0V7Fi9MtqBKr",
+      "authorship_tag": "ABX9TyP6A27GJDJXRpJa2o+xrM2U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1391,7 +1391,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C_LfzOKOL_7u",
-        "outputId": "91531193-f635-4f90-cfa3-53bdc1b44836"
+        "outputId": "7e1908ff-d0b2-4206-d01c-949142ff489f"
       },
       "source": [
         "from sklearn.metrics import confusion_matrix\n",
@@ -1406,7 +1406,7 @@
         "pred = lr.predict(val_X) \n",
         "print(classification_report(val_y, pred))"
       ],
-      "execution_count": 34,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "stream",
@@ -1432,7 +1432,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PwSz8wbDkuGq",
-        "outputId": "e2633dcb-7c84-4100-b017-01bd98d0115c"
+        "outputId": "267eb5ae-352c-4320-df71-60aed4d25485"
       },
       "source": [
         "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -1441,7 +1441,7 @@
         "pred = neigh.predict(val_X) \n",
         "print(classification_report(val_y, pred))"
       ],
-      "execution_count": 70,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "stream",
@@ -1468,7 +1468,7 @@
       "source": [
         "y_pred_proba = neigh.predict_proba(val_X)[:,1]"
       ],
-      "execution_count": 71,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -1478,12 +1478,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_4kTAjwJ5-yT",
-        "outputId": "84c33909-f976-471f-b8e2-9070ba15f618"
+        "outputId": "f2599176-b16a-48e9-9214-8d953c331aad"
       },
       "source": [
         "y_pred_proba"
       ],
-      "execution_count": 72,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1496,7 +1496,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 96
         }
       ]
     },
@@ -1509,7 +1509,7 @@
         "from sklearn.metrics import roc_curve\n",
         "fpr, tpr, thresholds = roc_curve(val_y, y_pred_proba, pos_label='Won')"
       ],
-      "execution_count": 74,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -1520,7 +1520,7 @@
           "height": 294
         },
         "id": "iDV7OUor50CH",
-        "outputId": "e2b61bc6-bd84-41de-9195-522582dacb8e"
+        "outputId": "6920b900-aa4b-4020-c7a3-9ed93651b6ed"
       },
       "source": [
         "plt.plot([0,1],[0,1],'k--')\n",
@@ -1530,7 +1530,7 @@
         "plt.title('Knn(n_neighbors=7) ROC curve')\n",
         "plt.show()"
       ],
-      "execution_count": 75,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1555,14 +1555,14 @@
           "height": 171
         },
         "id": "rsgXBd0c7WH3",
-        "outputId": "3c9ce0f2-daae-47ed-da1a-e085c420fa56"
+        "outputId": "f1c9dd21-25d1-4973-b765-374d22657b8f"
       },
       "source": [
         "from sklearn.metrics import confusion_matrix\n",
         "confusion_matrix(val_y,pred)\n",
         "pd.crosstab(val_y, pred, rownames=['True'], colnames=['Predicted'], margins=True)"
       ],
-      "execution_count": 77,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1631,9 +1631,22 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 77
+          "execution_count": 99
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p3oSQUwC9RzP"
+      },
+      "source": [
+        "import pickle\n",
+        "filename = 'finalized_model.sav'\n",
+        "pickle.dump(neigh, open(filename, 'wb'))"
+      ],
+      "execution_count": 100,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1677,7 +1690,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d3b2cd2-bec9-4412-db9e-dd1c6b929ed1"
+        "outputId": "c93a96d2-a093-46eb-a5a9-92c56f3d46b6"
       },
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
@@ -1686,19 +1699,19 @@
         "pred = neigh.predict(val_X) \n",
         "print(classification_report(val_y, pred))"
       ],
-      "execution_count": 51,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "        Lost       1.00      0.01      0.03       482\n",
-            "         Won       0.67      1.00      0.80       946\n",
+            "        Lost       1.00      0.15      0.25       482\n",
+            "         Won       0.70      1.00      0.82       946\n",
             "\n",
-            "    accuracy                           0.67      1428\n",
-            "   macro avg       0.83      0.51      0.41      1428\n",
-            "weighted avg       0.78      0.67      0.54      1428\n",
+            "    accuracy                           0.71      1428\n",
+            "   macro avg       0.85      0.57      0.54      1428\n",
+            "weighted avg       0.80      0.71      0.63      1428\n",
             "\n"
           ],
           "name": "stdout"
@@ -1782,7 +1795,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QKAYOmm4om_I",
-        "outputId": "cd248879-02a8-42da-f553-0b6ef8894edb"
+        "outputId": "307f722d-99cf-486c-8c68-60e9aaab198d"
       },
       "source": [
         "from sklearn.neural_network import MLPClassifier\n",
@@ -1791,19 +1804,19 @@
         "pred = neigh.predict(val_X) \n",
         "print(classification_report(val_y, pred))"
       ],
-      "execution_count": 47,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "        Lost       0.76      0.39      0.52       482\n",
-            "         Won       0.75      0.94      0.83       946\n",
+            "        Lost       0.55      0.44      0.49       482\n",
+            "         Won       0.74      0.82      0.78       946\n",
             "\n",
-            "    accuracy                           0.75      1428\n",
-            "   macro avg       0.75      0.66      0.67      1428\n",
-            "weighted avg       0.75      0.75      0.73      1428\n",
+            "    accuracy                           0.69      1428\n",
+            "   macro avg       0.65      0.63      0.63      1428\n",
+            "weighted avg       0.68      0.69      0.68      1428\n",
             "\n"
           ],
           "name": "stdout"
